<resources>
    <string name="app_name">TipCalculator</string>
    <string name="hintValor">Enter a value! Ex: 35.50</string>
    <string name="txtTip">Tip</string>
    <string name="txtTotal">Total</string>
    <string name="seekvalue">%</string>
    <string name="TotalTip">TotalTip</string>
    <string name="totalTip">R$ 0.00</string>
    <string name="textview">TextView</string>
    <string name="img">Imagem</string>
    <string name="semValor">Enter a valid value!</string>
</resources>